# pantry

./: Cargo.toml  README.md
src/: app.rs  cli.rs  clipboard.rs  exec.rs  main.rs  model.rs  template.rs
