[package]
name = "pantry-tui"
version = "0.2.0"
edition = "2024"
authors = ["James Tan <james_tan97@outlook.com>"]
description = "A TUI cookbook for managing and executing reusable shell snippets"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jamestjw/pantry"
readme = "README.md"
keywords = ["tui", "cli", "shell", "productivity", "cookbook"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "pantry"
path = "src/main.rs"

[dependencies]
arboard = "3.6"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
dirs = "6.0"
fuzzy-matcher = "0.3"
nom = "8.0.0"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
